スタイルなど更新

--- a/style/main.css
+++ b/style/main.css
@@ -1,28 +1,68 @@
 * {
-    font-family: meiryo;
+  font-family: meiryo;
+}
+
+h1 {
+  text-align: center;
+}
+
+#generate {
+  display: block;
+  /* Make the button a block element */
+  width: 150px;
+  /* Give it a fixed width (or a percentage) */
+  font-size: 24px;
+  margin: 0 auto;
+  /* Now it will center horizontally */
+}
+
+#loading {
+  text-align: center;
 }
 
 div#content {
-    border: 1px solid black;
-    margin: 0 auto;
-    max-width: 2000px;
+  margin: 0 auto;
+  max-width: 2000px;
 }
 
-  body { font-family: sans-serif; line-height: 1.5; margin: 20px; }
-  .article { border: 1px solid #ccc; padding: 10px; margin-bottom: 10px; border-radius: 5px; }
-  .article h2 { margin: 0 0 5px 0; font-size: 1.2em; }
-  .article p { margin: 0 0 5px 0; }
-  .article a { color: #1a0dab; text-decoration: none; }
+body {
+  line-height: 1.5;
+  margin: 20px;
+}
+
+.article {
+  border: 1px solid #ccc;
+  padding: 10px;
+  margin-bottom: 10px;
+  border-radius: 5px;
+}
+
+.article h2 {
+  margin: 0 0 5px 0;
+  font-size: 1.2em;
+}
+
+.article p {
+  margin: 0 0 5px 0;
+}
+
+.article a {
+  color: #1a0dab;
+  text-decoration: none;
+}
 
 #app-content {
   display: grid;
-  grid-template-columns: repeat(5, 1fr); /* 5 columns of equal width */
-  gap: 10px; /* space between divs */
+  grid-template-columns: repeat(5, 1fr);
+  /* 5 columns of equal width */
+  gap: 10px;
+  /* space between divs */
 }
 
 @media (max-width: 1200px) {
   #app-content {
-    grid-template-columns: 1fr; /* 1 column on mobile */
+    grid-template-columns: 1fr;
+    /* 1 column on mobile */
   }
 
   /* #generate {
@@ -32,9 +72,17 @@ div#content {
 }
 
 .thumbnail {
-    height: 300px;
-    width: auto;
-    max-width: 80%;
-    /* margin: 0 auto; */
-    /* display: flex; */
+  width: 100%;
+  /* Make the image scale */
+  height: 100%;
+  object-fit: contain;
+  /* Preserve aspect ratio and fit inside container */
+}
+
+.thumbnail-div {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 300px;
+  margin: 0 auto 5px auto;
 }
