--- a/style/main.css
+++ b/style/main.css
@@ -6,10 +6,14 @@ h1 {
   text-align: center;
 }
 
+.hidden {
+  visibility: hidden;
+}
+
 #generate-button {
   display: block;
   /* Make the button a block element */
-  width: 150px;
+  min-width: 150px;
   /* Give it a fixed width (or a percentage) */
   font-size: 24px;
   margin: 0 auto 10px auto;
